chaged the position of the navbar to fixed so it does not move down on safari mobile

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,8 +1,11 @@
 header {
     background-color: $navbar;
+    position: fixed;
+    width: 100vw;
     
     nav {
         padding: 20px;
+        
         
                
         .images-nav{
@@ -24,6 +27,10 @@ header {
                     background-color: $fontColor;
                     margin: 5px;
                     transition: 0.4s ease;
+                }
+
+                .line2 {
+                    transition: 0.2s ease;
                 }
             }
 
