--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,8 @@ main {
 
 header {
   background-color: #E3E3E3;
+  position: fixed;
+  width: 100vw;
 }
 
 header nav {
@@ -53,6 +55,11 @@ header nav .images-nav .hamburger div {
   margin: 5px;
   -webkit-transition: 0.4s ease;
   transition: 0.4s ease;
+}
+
+header nav .images-nav .hamburger .line2 {
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease;
 }
 
 header nav .images-nav .hamburger-active .line1 {
